# samples/web-csr/dressca-backend/web-admin/src/main/java/com/dressca/web/admin/controller/UsersController.java
@@ -3,7 +3,7 @@ package com.dressca.web.admin.controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import com.dressca.applicationcore.authorization.UserStore;
-import com.dressca.web.admin.controller.dto.UserResponse;
+import com.dressca.web.admin.controller.dto.user.GetLoginUserResponse;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
@@ -32,16 +32,17 @@ public class UsersController {
    * 
    * @return ユーザの情報。
    */
-
   @Operation(summary = "ログイン中のユーザーの情報を取得します。", description = "ユーザーの情報。")
   @ApiResponses(value = {
-      @ApiResponse(responseCode = "200", description = "成功.", content = @Content(mediaType = "application/json", schema = @Schema(implementation = UserResponse.class))),
-      @ApiResponse(responseCode = "401", description = "未認証エラー.", content = @Content)
+      @ApiResponse(responseCode = "200", description = "成功。", content = @Content(mediaType = "application/json", schema = @Schema(implementation = GetLoginUserResponse.class))),
+      @ApiResponse(responseCode = "401", description = "未認証。", content = @Content),
+      @ApiResponse(responseCode = "500", description = "サーバーエラー。", content = @Content)
   })
   @GetMapping
-  public ResponseEntity<UserResponse> getLoginUser() {
+  public ResponseEntity<GetLoginUserResponse> getLoginUser() {
 
-    UserResponse response = new UserResponse(this.userStore.loginUserName(), this.userStore.loginUserRole());
+    GetLoginUserResponse response = new GetLoginUserResponse(this.userStore.getLoginUserName(),
+        this.userStore.getLoginUserRoles());
     return ResponseEntity.ok().body(response);
 
   }
